fix user panel chat bar alignment

--- a/betterdiscord/app.css
+++ b/betterdiscord/app.css
@@ -253,7 +253,7 @@
   padding: 0px;
   width: 100%;
   background: var(--background-secondary);
-  padding-bottom: 10px;
+  padding-bottom: 8px;
   overflow: hidden;
   grid-area: panels;
 }
