--- a/src/theme/sidebar/_userPanel.scss
+++ b/src/theme/sidebar/_userPanel.scss
@@ -8,7 +8,7 @@
   padding: 0px;
   width: 100%;
   background: var(--background-secondary);
-  padding-bottom: 10px;
+  padding-bottom: 8px;
   overflow: hidden;
   grid-area: panels;
 }
